fixe the menu z-index

--- a/src/app/home-page/home-header/home-header.component.scss
+++ b/src/app/home-page/home-header/home-header.component.scss
@@ -18,6 +18,7 @@
   color: $white;
   right: 0.5em;
   top: 1em;
+  z-index: 10;
 
   span {
     margin-right: 1em;
